# BayesFM

./: .gitignore  LICENSE.txt  README.md  Taskfile.yml  lefthook.yml  my_FMALS.py  package-lock.json  pyproject.toml  run.py
fm_gibbs/: FM.py
fm_gibbs/Train/: FMGibbs.py
functions/: BFM.py  FM.py  FMALS.py  trainer.jl
functions/julia/: BFM.jl  FMALS.jl
myfm/: BFM.py  FM.py  FMALS.py  __init__.py
myfm/julia/: BFM.jl  FMALS.jl
notebooks/: experiment.ipynb
src/bayesfm/: __init__.py  _base.py  _fm.py  _gibbs.py
src/bayesfm/logging/: __init__.py  _logging.py  logging.config.json
src/bayesfm/train/: als.py  gibbs.py
src/fm_gibbs/: FM.py
src/fm_gibbs/Train/: FMALS.py  FMGibbs.py
src/fmgibbs/: fm.py  utils.py
src/fmgibbs/train/: als.py  gibbs.py  grad.py
test/: install_julia.py  test_BFM.py  test_als.py  test_als_vs_bfm.py  test_fastfm.py  test_fm_fast.py  test_remove_duplicate.py  test_set_params.py  test_test_als.py  test_train.py
tests/train/: test__gibbs.py  test__to_bqm.py
