[tool.poetry]
name = "fm_gibbs"
version = "0.1.1"
description = ""
authors = ["mory22k <mory22k@dc.tohoku.ac.jp>"]
readme = "README.md"
packages = [{include = "fm_gibbs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
numpy = "^2.0.0"
torch = "^2.3.1"
matplotlib = "^3.9.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
